--- a/merch.html
+++ b/merch.html
@@ -4,94 +4,102 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Restigouche Dojo Merch</title>
+
+  <!-- Load a professional font -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      font-family: 'Montserrat', sans-serif;
+      background: linear-gradient(to bottom, #e0f2f1, #ffffff);
       margin: 0;
       padding: 0;
     }
     .container {
-      max-width: 1000px;
-      margin: 40px auto;
-      padding: 20px;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      max-width: 1100px;
+      margin: 60px auto;
+      padding: 30px;
+      background: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.08);
     }
-h1 {
-  text-align: center;
-  font-size: 32px;
-  font-weight: 600;
-  color: #004d40;
-  margin-bottom: 10px;
-  position: relative;
-  padding-bottom: 10px;
-}
-
-h1::after {
-  content: "";
-  width: 80px;
-  height: 3px;
-  background: #009688;
-  display: block;
-  margin: 10px auto 0;
-  border-radius: 2px;
-}
-    h2 {
+    h1 {
       text-align: center;
-      color: #222;
+      font-size: 40px;
+      font-weight: 600;
+      color: #004d40;
+      letter-spacing: 1px;
+      margin-bottom: 20px;
+      position: relative;
+      padding-bottom: 15px;
+    }
+    h1::after {
+      content: "";
+      width: 90px;
+      height: 4px;
+      background: #26a69a;
+      display: block;
+      margin: 15px auto 0;
+      border-radius: 3px;
+      box-shadow: 0 0 6px rgba(38,166,154,0.6);
+    }
+    p {
+      text-align: center;
+      font-size: 18px;
+      color: #555;
+      margin-bottom: 40px;
     }
     .products {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 25px;
     }
     .product {
-      background: #fafafa;
-      border: 1px solid #ddd;
-      border-radius: 8px;
+      background: #f9f9f9;
+      border: 1px solid #e0e0e0;
+      border-radius: 12px;
       overflow: hidden;
       text-align: center;
-      padding: 15px;
-      transition: transform 0.2s ease;
-      position: relative;
+      padding: 20px;
+      transition: transform 0.25s ease, box-shadow 0.25s ease;
     }
     .product:hover {
-      transform: scale(1.02);
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
     }
     .product img {
       width: 100%;
       height: auto;
-      min-height: 250px;
+      min-height: 260px;
       object-fit: contain;
       border-bottom: 1px solid #ddd;
+      margin-bottom: 15px;
     }
     .product h3 {
       margin: 10px 0 5px;
-      font-size: 20px;
+      font-size: 22px;
       color: #333;
     }
     .price, .stock, .sizes {
-      margin: 5px 0;
+      margin: 6px 0;
       font-size: 16px;
+      color: #555;
     }
     .hidden {
       display: none;
     }
     .out-of-stock {
-      color: red;
+      color: #d32f2f;
       font-weight: bold;
     }
     .contact-button {
       display: inline-block;
-      margin-top: 10px;
-      padding: 10px 20px;
+      margin-top: 12px;
+      padding: 10px 24px;
       background-color: #007BFF;
       color: #fff;
       text-decoration: none;
-      border-radius: 5px;
+      border-radius: 25px;
       font-size: 16px;
       transition: background-color 0.3s ease;
     }
@@ -100,13 +108,8 @@ h1::after {
     }
     .sizes-group {
       margin-top: 8px;
-      text-align: left;
+      text-align: center;
       font-size: 15px;
-    }
-    .sizes-group strong {
-      display: block;
-      margin-bottom: 4px;
-      color: #555;
     }
   </style>
 </head>
@@ -114,7 +117,7 @@ h1::after {
 
 <div class="container">
   <h1>Restigouche Dojo Merch</h1>
-  <p style="text-align:center;">Official merch — made for the team, worn everywhere. Limited quantities — available for pick-up only!</p>
+  <p>Official training gear built for performance and durability. Limited quantities — available for pick-up only!</p>
 
   <div class="products">
 
@@ -122,52 +125,41 @@ h1::after {
     <div class="product">
       <img src="Photos/nogisetlongsleeve.png" alt="Restigouche Dojo No-Gi Rashguard and Shorts">
       <h3>No-Gi Rashguard + Shorts</h3>
-      <div class="price">Kids: No-Gi Set - $100 | Adult: No-Gi Set - $100</div>
+      <div class="price">Kids: $100  | Adult: $100 </div>
       <div class="stock" data-youth="10" data-adult="8">Stock: Kids - 0 sets | Adult - 4 sets</div>
       <div class="sizes-group">
-        <strong>Rashguard Sizes Available:</strong> Kids 0 | Adult XL, XL, XXL, XXL
+        <strong>Rashguard Sizes:</strong> Kids 0 | Adult XL, XL, XXL, XXL
       </div>
       <div class="sizes-group">
-        <strong>Shorts Sizes Available:</strong> Kids 0 | Adult XL, XL, XL
+        <strong>Shorts Sizes:</strong> Kids 0 | Adult XL, XL, XL
       </div>
-      <a href="mailto:restigouchedojo@gmail.com?subject=Gear%20Inquiry" class="contact-button">Contact Us to Reserve</a>
+      <a href="mailto:restigouchedojo@gmail.com?subject=Gear%20Inquiry" class="contact-button">Contact Us</a>
     </div>
 
     <!-- Future Product 1 (Hidden) -->
     <div class="product hidden">
       <img src="future-product1.jpg" alt="Coming Soon">
       <h3>Coming Soon Item #1</h3>
-      <div class="price">Price: $XX.XX</div>
+      <div class="price">Price: TBD</div>
       <div class="stock" data-youth="0" data-adult="0">Stock: Youth - 0 | Adult - 0</div>
-      <div class="sizes-group">
-        <strong>Rashguard Sizes Available:</strong> Coming Soon
-      </div>
-      <div class="sizes-group">
-        <strong>Shorts Sizes Available:</strong> Coming Soon
-      </div>
-      <a href="mailto:info@restigouchedojo.com?subject=Product%20Inquiry" class="contact-button">Contact Us to Reserve</a>
+      <div class="sizes-group">Sizes: Coming Soon</div>
+      <a href="mailto:info@restigouchedojo.com?subject=Product%20Inquiry" class="contact-button">Contact Us</a>
     </div>
 
     <!-- Future Product 2 (Hidden) -->
     <div class="product hidden">
       <img src="future-product2.jpg" alt="Coming Soon">
       <h3>Coming Soon Item #2</h3>
-      <div class="price">Price: $XX.XX</div>
+      <div class="price">Price: TBD</div>
       <div class="stock" data-youth="0" data-adult="0">Stock: Youth - 0 | Adult - 0</div>
-      <div class="sizes-group">
-        <strong>Rashguard Sizes Available:</strong> Coming Soon
-      </div>
-      <div class="sizes-group">
-        <strong>Shorts Sizes Available:</strong> Coming Soon
-      </div>
-      <a href="mailto:info@restigouchedojo.com?subject=Product%20Inquiry" class="contact-button">Contact Us to Reserve</a>
+      <div class="sizes-group">Sizes: Coming Soon</div>
+      <a href="mailto:info@restigouchedojo.com?subject=Product%20Inquiry" class="contact-button">Contact Us</a>
     </div>
 
   </div>
 </div>
 
 <script>
-  // Highlight if totally out of stock
   document.addEventListener('DOMContentLoaded', function() {
     const stockElements = document.querySelectorAll('.stock');
     stockElements.forEach(function(stockEl) {
