--- a/merch.html
+++ b/merch.html
@@ -117,7 +117,7 @@
 
 <div class="container">
   <h1>Restigouche Dojo Merch</h1>
-  <p>Official merch — made for the team, worn everywhere.. Limited quantities — available for pick-up only!</p>
+  <p>Official merch — made for the team, worn everywhere. Limited quantities — available for pick-up only!</p>
 
   <div class="products">
 
