--- a/merch.html
+++ b/merch.html
@@ -136,15 +136,15 @@
       <a href="mailto:restigouchedojo@gmail.com?subject=Gear%20Inquiry" class="contact-button">Contact Us</a>
     </div>
 
-    <!-- Future Product 1 (Hidden) -->
-    <div class="product hidden">
-      <img src="future-product1.jpg" alt="Coming Soon">
-      <h3>Coming Soon Item #1</h3>
-      <div class="price">Price: TBD</div>
-      <div class="stock" data-youth="0" data-adult="0">Stock: Youth - 0 | Adult - 0</div>
-      <div class="sizes-group">Sizes: Coming Soon</div>
-      <a href="mailto:info@restigouchedojo.com?subject=Product%20Inquiry" class="contact-button">Contact Us</a>
-    </div>
+    <!-- Crewnecks -->
+ <div class="product">
+  <img src="Photos/crewneck.png" alt="Crewneck Sweatshirt">
+  <h3>Crewneck Sweatshirt</h3>
+  <div class="price">Price: S-2XL $50 | 3XL-5XL $55</div>
+  <div class="stock">Made on Demand - No Stock Kept</div>
+  <div class="sizes-group">Sizes Available: S, M, L, XL, 2XL, 3XL, 4XL, 5XL</div>
+  <a href="mailto:restigouchedojo@gmail.com?subject=Crewneck%20Order%20Request" class="contact-button">Order Now</a>
+</div>
 
     <!-- Future Product 2 (Hidden) -->
     <div class="product hidden">
