--- a/merch.html
+++ b/merch.html
@@ -143,7 +143,7 @@
   <div class="price">Price: S-2XL $50 | 3XL-5XL $55</div>
   <div class="stock">Made on Demand - No Stock Kept</div>
   <div class="sizes-group">Sizes Available: S, M, L, XL, 2XL, 3XL, 4XL, 5XL</div>
-  <a href="mailto:restigouchedojo@gmail.com?subject=Crewneck%20Order%20Request" class="contact-button">Order Now</a>
+  <a href="mailto:restigouchedojo@gmail.com?subject=Crewneck%20Order%20Request" class="contact-button">Contact Us</a>
 </div>
 
     <!-- Hoodies -->
@@ -153,7 +153,7 @@
   <div class="price">Price: S-2XL $60 | 3XL-5XL $65</div>
   <div class="stock">Made on Demand - No Stock Kept</div>
   <div class="sizes-group">Sizes Available: S, M, L, XL, 2XL, 3XL, 4XL, 5XL</div>
-  <a href="mailto:restigouchedojo@gmail.com?subject=Hoodie%20Order%20Request" class="contact-button">Order Now</a>
+  <a href="mailto:restigouchedojo@gmail.com?subject=Hoodie%20Order%20Request" class="contact-button">Contact Us</a>
 </div>
 
   </div>
