--- a/merch.html
+++ b/merch.html
@@ -156,6 +156,16 @@
   <a href="mailto:restigouchedojo@gmail.com?subject=Hoodie%20Order%20Request" class="contact-button">Contact Us</a>
 </div>
 
+    <!-- TShirts -->
+<div class="product">
+  <img src="Photos/tshirt.png" alt="T-Shirt">
+  <h3>T-Shirt</h3>
+  <div class="price">Price: S-XL $35 | 2XL-3XL $40</div>
+  <div class="stock">Made on Demand - No Stock Kept</div>
+  <div class="sizes-group">Sizes Available: S, M, L, XL, 2XL, 3XL</div>
+  <a href="mailto:restigouchedojo@gmail.com?subject=T-Shirt%20Order%20Request" class="contact-button">Contact Us</a>
+</div>
+
   </div>
 </div>
 
