--- a/merch.html
+++ b/merch.html
@@ -166,6 +166,22 @@
   <a href="mailto:restigouchedojo@gmail.com?subject=T-Shirt%20Order%20Request" class="contact-button">Contact Us</a>
 </div>
 
+    <!-- Windbreaker -->
+<div class="product">
+  <img src="Photos/windbreaker.png" alt="Windbreaker Set (Top and Bottom)">
+  <h3>Windbreaker Set (Top and Bottom)</h3>
+  <div class="price">Price: $100 (Set)</div>
+  <div class="stock">Currently Passing Order - No Stock Available</div>
+  <div class="sizes-group">
+    Sizes Available:<br>
+    Kids: 4Y, 5Y, 6Y<br>
+    Youth: XS, S, M, L, XL<br>
+    Adult: XS, S, M, L, XL, 2XL, 3XL, 4XL, 5XL
+  </div>
+  <a href="mailto:restigouchedojo@gmail.com?subject=Windbreaker%20Order%20Request" class="contact-button">Contact Us</a>
+</div>
+
+
   </div>
 </div>
 
