--- a/merch.html
+++ b/merch.html
@@ -124,7 +124,7 @@
     <!-- Rashguard and Shorts Product -->
     <div class="product">
       <img src="Photos/nogisetlongsleeve.png" alt="Restigouche Dojo No-Gi Rashguard and Shorts">
-      <h3>No-Gi Rashguard + Shorts</h3>
+      <h3>No-Gi Set (Top and Bottom)</h3>
       <div class="price">Kids: $100  | Adult: $100 </div>
       <div class="stock" data-youth="10" data-adult="8">Stock: Kids - 0 sets | Adult - 4 sets</div>
       <div class="sizes-group">
