--- a/dojofit.html
+++ b/dojofit.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Dojo Fit</h1>
-    <a href="https://restigouchedojo.com/contactus.html" class="cta-btn">Register Now / Inscris-toi</a>
+    <a href="https://square.link/u/wJKFmQSm" class="cta-btn">Register Now / Inscris-toi</a>
     <a href="index.html" class="back-btn">Back to Main Website</a> 
   </header>
   <div class="container">
@@ -37,7 +37,7 @@
     <section class="section">
       <h2 class="section-title" id="section-title-2">Spots Are Limited — Register Now!</h2>
       <p class="section-content" id="section-content-2">Make this summer your strongest yet. Learn. Sweat. Bond. Repeat.</p>
-      <a href="https://restigouchedojo.com/contactus.html" class="cta-btn">Register Now / Inscris-toi</a>
+      <a href="https://square.link/u/wJKFmQSm" class="cta-btn">Register Now / Inscris-toi</a>
     </section>
 
     <section class="section">
