--- a/merch.html
+++ b/merch.html
@@ -166,6 +166,7 @@
   <a href="mailto:restigouchedojo@gmail.com?subject=T-Shirt%20Order%20Request" class="contact-button">Contact Us</a>
 </div>
 
+<!-- HIDDEN
     <!-- Windbreaker -->
 <div class="product">
   <img src="Photos/windbreaker.png" alt="Windbreaker Set (Top and Bottom)">
@@ -180,7 +181,7 @@
   </div>
   <a href="mailto:restigouchedojo@gmail.com?subject=Windbreaker%20Order%20Request" class="contact-button">Contact Us</a>
 </div>
-
+-->
 
   </div>
 </div>
