--- a/merch.html
+++ b/merch.html
@@ -174,9 +174,9 @@
   <div class="stock">Currently Passing Order - No Stock Available</div>
   <div class="sizes-group">
     Sizes Available:<br>
-    Kids: 4Y, 5Y, 6Y<br>
+    Kids: 4Y, 5-6Y, 6-7Y, 7-8Y<br>
     Youth: XS, S, M, L, XL<br>
-    Adult: XS, S, M, L, XL, 2XL, 3XL, 4XL, 5XL
+    Adult: XS, S, M, L, XL, 2XL, 3XL
   </div>
   <a href="mailto:restigouchedojo@gmail.com?subject=Windbreaker%20Order%20Request" class="contact-button">Contact Us</a>
 </div>
