--- a/merch.html
+++ b/merch.html
@@ -175,8 +175,8 @@
   <div class="sizes-group">
     Sizes Available:<br>
     Kids: 4Y, 5-6Y, 6-7Y, 7-8Y<br>
-    Youth: XS, S, M, L, XL<br>
-    Adult: XS, S, M, L, XL, 2XL, 3XL
+    Youth: XS, S, M, L<br>
+    Adult: XXS, XS, S, M, L, XL, 2XL, 3XL
   </div>
   <a href="mailto:restigouchedojo@gmail.com?subject=Windbreaker%20Order%20Request" class="contact-button">Contact Us</a>
 </div>
