--- a/merch.html
+++ b/merch.html
@@ -136,6 +136,21 @@
       <a href="mailto:restigouchedojo@gmail.com?subject=Gear%20Inquiry" class="contact-button">Contact Us</a>
     </div>
 
+<!-- Rashguard and Shorts Product -->
+<div class="product">
+  <img src="Photos/nogisetshortsleeve.png" alt="Restigouche Dojo No-Gi Short Sleeve Rashguard and Shorts">
+  <h3>No-Gi Set (Short Sleeve Top and Shorts)</h3>
+  <div class="price">Kids: $100  | Adult: $100 </div>
+  <div class="stock">Stock: Kids - 0 sets | Adult - 0 sets (Pending order)</div>
+  <div class="sizes-group">
+    <strong>Rashguard Sizes:</strong> Kids 0 | Adult 0
+  </div>
+  <div class="sizes-group">
+    <strong>Shorts Sizes:</strong> Kids 0 | Adult 0
+  </div>
+  <a href="mailto:restigouchedojo@gmail.com?subject=Gear%20Inquiry" class="contact-button">Contact Us</a>
+</div>
+
     <!-- Crewnecks -->
  <div class="product">
   <img src="Photos/crewneck.png" alt="Crewneck Sweatshirt">
