--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>
 		  
             <div class="offering">
-              <h3>Dojo Fit (upcoming)</h3>
+              <h3>Dojo Fit</h3>
               <p>Stay fit and healthy with our Dojo Fit classes – full-body workouts inspired by grappling movements, designed for all fitness levels.
 	      <ul>
 		      <li><a href="dojofit.html">Dojo Fit</a></li>
