--- a/semiprivates.html
+++ b/semiprivates.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Semi-Private Judo & BJJ – Off-Season Training</h1>
-    <a href="https://restigouchedojo.com/contactus.html" class="cta-btn">Register Now / Inscris-toi</a>
+    <a href="https://square.link/u/z8lUh23W" class="cta-btn">Register Now / Inscris-toi</a>
     <a href="index.html" class="back-btn">Back to Main Website</a> 
   </header>
   <div class="container">
@@ -45,7 +45,7 @@
 
         <strong>Don't miss this opportunity to keep your child engaged, learning, and growing through the off-season.</strong>
       </p>
-      <a href="https://restigouchedojo.com/contactus.html" class="cta-btn">Register Now / Inscris-toi</a>
+      <a href="https://square.link/u/z8lUh23W" class="cta-btn">Register Now / Inscris-toi</a>
     </section>
 
     <section class="section">
