--- a/merch.html
+++ b/merch.html
@@ -126,9 +126,9 @@
       <img src="Photos/nogisetlongsleeve.png" alt="Restigouche Dojo No-Gi Rashguard and Shorts">
       <h3>No-Gi Set (Top and Bottom)</h3>
       <div class="price">Kids: $100  | Adult: $100 </div>
-      <div class="stock" data-youth="10" data-adult="8">Stock: Kids - 0 sets | Adult - 4 sets</div>
+      <div class="stock" data-youth="10" data-adult="8">Stock: Kids - 0 sets | Adult - 3 sets</div>
       <div class="sizes-group">
-        <strong>Rashguard Sizes:</strong> Kids 0 | Adult XL, XL, XXL, XXL
+        <strong>Rashguard Sizes:</strong> Kids 0 | Adult XL, XL, XXL
       </div>
       <div class="sizes-group">
         <strong>Shorts Sizes:</strong> Kids 0 | Adult XL, XL, XL
