--- a/schedule.html
+++ b/schedule.html
@@ -113,8 +113,19 @@
                     <td>Maxime Raymond</td>
                 </tr>
                 <!-- Add more rows for each class -->
+		<!--<tr>
+		    <td>Thursday</td>
+		    <td>6:00 PM - 7:00 PM</td>
+		    <td>Adult BJJ (Alternates Weekly: Dojo Lab or No-Gi Class)</td>
+		    <td>Maxime Raymond</td>
+	    	</tr> -->
             </tbody>
         </table>
+	    
+	   <!-- <p style="margin-top: 10px; font-style: italic;">
+		    * Thursday Adult BJJ alternates weekly between a <strong>Dojo Lab</strong> — a member-only space to drill, roll, and refine your techniques in a focused, unstructured format — and a <strong>No-Gi Class</strong> taught by Maxime Raymond.
+	    </p> -->
+
     </div>
 
     <!-- ... -->
