--- a/schedule.html
+++ b/schedule.html
@@ -62,7 +62,7 @@
                 <!--Schedule area-->
                 
     <div class="schedule-area">
-        <h2 class="schedule-title">Schedule Winter 2025</h2>
+        <h2 class="schedule-title">Schedule 2025</h2>
         <table class="schedule-table">
             <thead>
                 <tr>
