--- a/registration.html
+++ b/registration.html
@@ -153,17 +153,21 @@
 		  <!--TRY-->
 		  
 		  <div class="demo__div people">
-                  <div class="people__div people__div--img">
-                      <img src="Photos/BJJ1.jpg" alt="" class="people__img">
-                  </div>
-                  <div class="people__div people__div--info">
-                      <h2 class="people__name">Monthly(13+ Y.O.)</h2>
-                      <p class="people__desc"> Monthly: $67.5
-			      <a href="https://square.link/u/fATYua9H" target="_blank">Pay now</a><br>
-			      <a>3 months:</a> <a href="https://restigouchedojo.com/contactus.html">Contact us</a><br>
-			  <a href="https://restigouchedojo.com/bjjinfo.html" target="">Program info</a>
-			  </p>
-                  </div>
+			  <div class="people__div people__div--img">
+				  <img src="Photos/BJJ1.jpg" alt="" class="people__img">
+			  </div>
+			  <div class="people__div people__div--info">
+				  <h2 class="people__name">Adult BJJ (13+ Y.O.)</h2>
+				  <p class="people__desc">
+					  Monthly plans start at <strong>$67.50</strong>.<br>
+					  <em>Payment options vary depending on your needs.</em><br><br>
+					  <a href="https://restigouchedojo.com/contactus.html">Please contact us to arrange your plan</a><br><br>
+					  <a href="https://restigouchedojo.com/bjjinfo.html">Program info</a>
+				  </p>
+			  </div>
+		  </div>
+
+		  
                   <div class="people__div people__div--name">
                       <h2 class="people-name">Adult BJJ</h2>
                   </div>
@@ -176,7 +180,7 @@
                 <div class="people__div people__div--info">
                     <h2 class="people__name">Youth No-Gi BJJ</h2>
                     <p class="people__desc"> Fees: $
-                        <a href="BLANK" target="_blank">Pay now</a>
+                        <a href="https://restigouchedojo.com/contactus.html" target="_blank">Contact us!</a>
                 </div>
                 <div class="people__div people__div--name">
                     <h2 class="people-name">Youth No-Gi BJJ</h2>
