--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
         <div class="wrapper-body">
             <h3></h3>
             
-         <!--   <!--BOX-->
+            <!--BOX-->
            
                 <br> <div class="box">
                 <span></span>
                 <h5><a href="bjjinfo.html">NEW CLASS-ADULT NO-GI BJJ</a></h5>
               </div>
             <!--BOX END-->
--->
+
 		
 		
                         <!--New content-->
