--- a/schedule.html
+++ b/schedule.html
@@ -116,13 +116,13 @@
 		<tr>
 		    <td>Thursday</td>
 		    <td>6:00 PM - 7:00 PM</td>
-		    <td>Adult BJJ (Alternates Weekly: Dojo Lab or No-Gi Class)</td>
+		    <td>Adult BJJ (Alternates Weekly: Almost Open Mat or No-Gi Class)</td>
 		    <td>Maxime Raymond</td>
 	    	</tr> -->
             </tbody>
         </table>
 	    
-	   <!-- <p style="margin-top: 10px; font-style: italic;">
+	   <p style="margin-top: 10px; font-style: italic;">
 		    * Thursday Adult BJJ alternates weekly between a <strong>Dojo Lab</strong> — a member-only space to drill, roll, and refine your techniques in a focused, unstructured format — and a <strong>No-Gi Class</strong> taught by Maxime Raymond.
 	    </p> 
 
