--- a/schedule.html
+++ b/schedule.html
@@ -123,7 +123,7 @@
         </table>
 	    
 	   <p style="margin-top: 10px; font-style: italic;">
-		    * Thursday Adult BJJ alternates weekly between a <strong>Dojo Lab</strong> — a member-only space to drill, roll, and refine your techniques in a focused, unstructured format — and a <strong>No-Gi Class</strong> taught by Maxime Raymond.
+		    * Thursday Adult BJJ alternates weekly between a <strong>Almost Open Mat</strong> — a member-only space to drill, roll, and refine your techniques in a focused, unstructured format — and a <strong>No-Gi Class</strong> taught by Maxime Raymond.
 	    </p> 
 
     </div>
