--- a/schedule.html
+++ b/schedule.html
@@ -118,12 +118,12 @@
 		    <td>6:00 PM - 7:00 PM</td>
 		    <td>Adult BJJ (Alternates Weekly: Almost Open Mat or No-Gi Class)</td>
 		    <td>Maxime Raymond</td>
-	    	</tr> -->
+	    	</tr> 
             </tbody>
         </table>
 	    
 	   <p style="margin-top: 10px; font-style: italic;">
-		    * Thursday Adult BJJ alternates weekly between a <strong>Almost Open Mat</strong> — a member-only space to drill, roll, and refine your techniques in a focused, unstructured format — and a <strong>No-Gi Class</strong> taught by Maxime Raymond.
+		    * Thursday Adult BJJ alternates weekly between a <strong>Almost Open Mat</strong> — a member-only space— and a <strong>No-Gi Class</strong> taught by Maxime Raymond.
 	    </p> 
 
     </div>
