--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
            
                 <br> <div class="box">
                 <span></span>
-                <h5><a href="bjjinfo.html">NEW CLASS-ADULT NO-GI BJJ</a></h5>
+                <h5><a href="bjjinfo.html">NEW CLASS-ADULT NO-GI BJJ STARTING JULY</a></h5>
               </div>
             <!--BOX END-->
 
