--- a/outdoorrolls.html
+++ b/outdoorrolls.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Outdoor BJJ Rolls - July 19, 2025</title>
-    <link rel="stylesheet" href="seminar2025.css"> <!-- You can rename the CSS file if needed -->
+    <link rel="stylesheet" href="khk.css"> <!-- You can rename the CSS file if needed -->
 </head>
 <body>
     <header>
