--- a/outdoorrolls.html
+++ b/outdoorrolls.html
@@ -1,45 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Outdoor BJJ Rolls - July 19, 2025</title>
-    <link rel="stylesheet" href="khk.css"> <!-- You can rename the CSS file if needed -->
+    <link rel="stylesheet" href="khk.css"> <!-- Link to your CSS file -->
 </head>
+
 <body>
     <header>
         <h1>🥋 Outdoor BJJ Rolls at Inch Arran Park 🏞️</h1>
-        <p class="event-details">Let’s take the mats outside! Join us for an all-rolling Brazilian Jiu-Jitsu session in the heart of nature. No warm-up, just straight to the action.</p>
+        <p class="event-details">
+            Let’s take the mats outside! Join us for an all-rolling Brazilian Jiu-Jitsu session in the heart of nature. No warm-up, just straight to the action.
+        </p>
     </header>
 
-    <section class="event-info">
-        <h2>Event Details</h2>
-        <div class="info-box">
-            <p><strong>Date:</strong> July 19th, 2025</p>
-            <p><strong>Time:</strong> 10:00 AM - 11:00 AM</p>
-            <p><strong>Location:</strong> Inch Arran Park, Dalhousie NB</p>
-            <p><strong>What to Bring:</strong> Your gi, a water bottle, and your good vibes. Outdoor shoes or flip-flops are recommended for walking to and from the mat area.</p>
-            <p><strong>Note:</strong> This session is weather-permitting. We’ll notify participants if anything changes due to conditions.</p>
-        </div>
-    </section>
+    <main>
+        <section class="event-info">
+            <h2>Event Details</h2>
+            <div class="info-box">
+                <p><strong>Date:</strong> July 19th, 2025</p>
+                <p><strong>Time:</strong> 10:00 AM - 11:00 AM</p>
+                <p><strong>Location:</strong> Inch Arran Park, Dalhousie NB</p>
+                <p><strong>What to Bring:</strong> Your gi, a water bottle, and your good vibes. Outdoor shoes or flip-flops are recommended for walking to and from the mat area.</p>
+                <p><strong>Note:</strong> This session is weather-permitting. We’ll notify participants if anything changes due to conditions.</p>
+            </div>
+        </section>
 
-    <section class="photo">
-        <h2>Event Sneak Peek</h2>
-        <div class="photo-container">
-            <img src="Photos/parkbjj.webp" alt="Outdoor BJJ Class" class="event-photo">
-        </div>
-    </section>
+        <section class="photo">
+            <h2>Event Sneak Peek</h2>
+            <div class="photo-container">
+                <img src="Photos/parkbjj.webp" alt="BJJ students training outdoors at Inch Arran Park" class="event-photo">
+            </div>
+        </section>
 
-    <section class="agenda">
-        <h2>Agenda</h2>
-        <div class="agenda-box">
-            <h3>Rolling Session Only</h3>
-            <p>No warm-up, no technique—just rounds. Come ready to train and enjoy rolling in a unique outdoor environment.</p>
-        </div>
-    </section>
+        <section class="agenda">
+            <h2>Agenda</h2>
+            <div class="agenda-box">
+                <h3>Rolling Session Only</h3>
+                <p>No warm-up, no technique—just rounds. Come ready to train and enjoy rolling in a unique outdoor environment.</p>
+            </div>
+        </section>
+    </main>
 
     <footer>
         <p>We’re looking forward to rolling with you in the sunshine! Don’t miss this special summer session at the park!</p>
+        <!-- Optional contact info -->
+        <!-- <p>Contact us at: bjjclub@example.com</p> -->
     </footer>
 </body>
+
 </html>
