--- a/outdoorrolls.html
+++ b/outdoorrolls.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Outdoor BJJ Rolls - July 19, 2025</title>
-    <link rel="stylesheet" href="khk.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="outdoorrolls.css"> <!-- Link to your CSS file -->
 </head>
 
 <body>
