--- a/outdoorrolls.html
+++ b/outdoorrolls.html
@@ -23,7 +23,7 @@
                 <p><strong>Date:</strong> July 19th, 2025</p>
                 <p><strong>Time:</strong> 10:00 AM - 11:00 AM</p>
                 <p><strong>Location:</strong> Inch Arran Park, Dalhousie NB</p>
-                <p><strong>What to Bring:</strong> Your gi, a water bottle, and your good vibes. Outdoor shoes or flip-flops are recommended for walking to and from the mat area.</p>
+                <p><strong>What to Bring:</strong> No-Gi attire, a water bottle, and your good vibes. Outdoor shoes or flip-flops are recommended for walking to and from the mat area.</p>
                 <p><strong>Note:</strong> This session is weather-permitting. We’ll notify participants if anything changes due to conditions.</p>
             </div>
         </section>
