--- a/outdoorrolls.html
+++ b/outdoorrolls.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>🥋 Outdoor BJJ Rolls at Inch Arran Park 🏞️</h1>
+        <h1>Outdoor BJJ Rolls at Inch Arran Park</h1>
         <p class="event-details">
             Let’s take the mats outside! Join us for an all-rolling Brazilian Jiu-Jitsu session in the heart of nature. No warm-up, just straight to the action.
         </p>
