--- a/outdoorrolls.html
+++ b/outdoorrolls.html
@@ -31,7 +31,7 @@
         <section class="photo">
             <h2>Event Sneak Peek</h2>
             <div class="photo-container">
-                <img src="Photos/parkbjj.webp" alt="BJJ students training outdoors at Inch Arran Park" class="event-photo">
+                <img src="Photos/PXL_20250628_130308290~2.jpg" alt="Inch Arran Park" class="event-photo">
             </div>
         </section>
 
