--- a/outdoorrolls.html
+++ b/outdoorrolls.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Outdoor BJJ Rolls at Inch Arran Park</h1>
         <p class="event-details">
-            Let’s take the mats outside! Join us for an all-rolling Brazilian Jiu-Jitsu session in the heart of nature. No warm-up, just straight to the action.
+            Let’s take the mats outside! Join us for an all-rolling Brazilian Jiu-Jitsu session in the heart of nature. Light warm-up, then straight to the action.
         </p>
     </header>
 
@@ -39,7 +39,7 @@
             <h2>Agenda</h2>
             <div class="agenda-box">
                 <h3>Rolling Session Only</h3>
-                <p>No warm-up, no technique—just rounds. Come ready to train and enjoy rolling in a unique outdoor environment.</p>
+                <p>Light warm-up, no technique—just rounds. Come ready to train and enjoy rolling in a unique outdoor environment.</p>
             </div>
         </section>
     </main>
