--- a/registration.html
+++ b/registration.html
@@ -178,7 +178,7 @@
                 </div>
                 <div class="people__div people__div--info">
                     <h2 class="people__name">Youth No-Gi BJJ</h2>
-                    <p class="people__desc"> Fees: $
+                    <p class="people__desc"> Fall block: $200
                         <a href="https://restigouchedojo.com/contactus.html" target="_blank">Contact us!</a>
                 </div>
                 <div class="people__div people__div--name">
