--- a/registration.html
+++ b/registration.html
@@ -179,7 +179,7 @@
                 <div class="people__div people__div--info">
                     <h2 class="people__name">Youth No-Gi BJJ</h2>
                     <p class="people__desc"> Fall block: $200
-                        <a href="https://restigouchedojo.com/contactus.html" target="_blank">Register Now!</a>
+                        <a href="https://square.link/u/ZGpCTToi" target="_blank">Register Now!</a>
                 </div>
                 <div class="people__div people__div--name">
                     <h2 class="people-name">Youth No-Gi BJJ</h2>
