--- a/registration.html
+++ b/registration.html
@@ -68,9 +68,9 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">2025 season</h2>
                       <p class="people__desc"> Fall block: $195.81
-			       <a href="contactus.html" target="_blank">Register Now!</a>
+			       <a href="https://square.link/u/pPcR8425" target="_blank">Register Now!</a>
 			<br> <span class="red"><strong>ON SALE</strong></span>: Annual: $355.30
-			       <a href="contactus.html" target="_blank">Register Now!</a>
+			       <a href="https://square.link/u/ofqdbRGM" target="_blank">Register Now!</a>
 			      
 			    <br><a href="https://restigouchedojo.com/tinytotsinfo.html" target="">Program info</a>
 			  </p>
