--- a/schedule.html
+++ b/schedule.html
@@ -74,26 +74,21 @@
             </thead>
             <tbody>
                 <tr>
-                    <td rowspan="3">Sunday</td>
-                    <td>9:00 AM - 9:45 AM</td>
+                    <td rowspan="3">Saturday</td>
+                    <td>9:00 AM - 9:35 AM</td>
                     <td>Tiny Tots</td>
                     <td>Maxime Raymond</td>
                 </tr>
                 <tr>
-                    <td>10:00 AM - 10:45 AM</td>
+                    <td>9:45 AM - 10:30 AM</td>
                     <td>Kinder Judo</td>
-                    <td>Megan Raymond</td>
-                </tr>
-                <tr>
-                    <td>11:00 AM - 12:00 PM</td>
-                    <td>Youth Judo</td>
                     <td>Megan Raymond</td>
                 </tr>
                 <tr>
                     <td rowspan="2">Monday</td>
                     <td>5:00 PM - 6:00 PM</td>
-                    <td>Youth No-Gi Brazilian Jiu Jitsu</td>
-                    <td>Mike Miller</td>
+                    <td>Youth Judo</td>
+                    <td>Megan Raymond</td>
                 </tr>
 		<tr>
                     <td>6:00 PM - 7:00 PM</td>
@@ -114,11 +109,16 @@
                 </tr>
                 <!-- Add more rows for each class -->
 		<tr>
-		    <td>Thursday</td>
+		    <td rowspan="2">Thursday</td>
+		    <td>5:00 PM - 6:00 PM</td>
+		    <td>Youth No-Gi BJJ</td>
+		    <td>Mike Miller</td>
+	    	</tr> 
+		<tr>
 		    <td>6:00 PM - 7:00 PM</td>
 		    <td>Adult BJJ (Alternates Weekly: Almost Open Mat or No-Gi Class)</td>
 		    <td>Maxime Raymond</td>
-	    	</tr> 
+                </tr>
             </tbody>
         </table>
 	    
