--- a/schedule.html
+++ b/schedule.html
@@ -92,7 +92,7 @@
                 </tr>
 		<tr>
                     <td>6:00 PM - 7:00 PM</td>
-                    <td>Adult Brazilian Jiu Jitsu</td>
+                    <td>Adult Gi Brazilian Jiu Jitsu</td>
                     <td>Maxime Raymond</td>
                 </tr>
 		    
@@ -104,7 +104,7 @@
                 </tr>
                 <tr>
                     <td>6:00 PM - 7:00 PM</td>
-                    <td>Adult Brazilian Jiu Jitsu</td>
+                    <td>Adult Gi Brazilian Jiu Jitsu</td>
                     <td>Maxime Raymond</td>
                 </tr>
                 <!-- Add more rows for each class -->
@@ -116,7 +116,7 @@
 	    	</tr> 
 		<tr>
 		    <td>6:00 PM - 7:00 PM</td>
-		    <td>Adult BJJ (Alternates Weekly: Almost Open Mat or No-Gi Class)</td>
+		    <td>Adult No-Gi BJJ (Alternates Weekly: Almost Open Mat or No-Gi Class)</td>
 		    <td>Maxime Raymond</td>
                 </tr>
             </tbody>
