--- a/outdoorrolls.html
+++ b/outdoorrolls.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Outdoor BJJ Rolls - July 19, 2025</title>
+    <title>Outdoor BJJ Rolls - August 9, 2025</title>
     <link rel="stylesheet" href="outdoorrolls.css"> <!-- Link to your CSS file -->
 </head>
 
@@ -20,8 +20,8 @@
         <section class="event-info">
             <h2>Event Details</h2>
             <div class="info-box">
-                <p><strong>Date:</strong> July 19th, 2025</p>
-                <p><strong>Time:</strong> 10:00 AM - 11:00 AM</p>
+                <p><strong>Date:</strong> August 9th, 2025</p>
+                <p><strong>Time:</strong> 10:45 AM - 12:00 PM</p>
                 <p><strong>Location:</strong> Inch Arran Park, Dalhousie NB</p>
                 <p><strong>What to Bring:</strong> No-Gi attire, a water bottle, and your good vibes. Outdoor shoes or flip-flops are recommended for walking to and from the mat area.</p>
                 <p><strong>Note:</strong> This session is weather-permitting. We’ll notify participants if anything changes due to conditions.</p>
