--- a/merch.html
+++ b/merch.html
@@ -141,12 +141,12 @@
   <img src="Photos/nogisetshortsleeve.png" alt="Restigouche Dojo No-Gi Short Sleeve Rashguard and Shorts">
   <h3>No-Gi Set (Short Sleeve Top and Shorts)</h3>
   <div class="price">Kids: $100  | Adult: $100 </div>
-  <div class="stock">Stock: Kids - 0 sets | Adult - 0 sets (Pending order)</div>
+  <div class="stock">Stock: Kids - 0 sets | Adult - 11 sets </div>
   <div class="sizes-group">
-    <strong>Rashguard Sizes:</strong> Kids 0 | Adult 0
+    <strong>Rashguard Sizes:</strong> Kids 0 | Adult S, M, L, L, XL, XL, 2XL, 2XL, 3XL, 3XL, 4XL
   </div>
   <div class="sizes-group">
-    <strong>Shorts Sizes:</strong> Kids 0 | Adult 0
+    <strong>Shorts Sizes:</strong> Kids 0 | Adult S, M, L, L, L, XL, XL, XL, XL, XL, 2XL
   </div>
   <a href="mailto:restigouchedojo@gmail.com?subject=Gear%20Inquiry" class="contact-button">Contact Us</a>
 </div>
