--- a/merch.html
+++ b/merch.html
@@ -186,7 +186,7 @@
   <img src="Photos/windbreaker.png" alt="Windbreaker Set (Top and Bottom)">
   <h3>Windbreaker Set (Top and Bottom)</h3>
   <div class="price">Price: $100 (Set)</div>
-  <div class="stock">Currently Passing Order - No Stock Available</div>
+  <div class="stock">Pending Order - No Stock Available</div>
   <div class="sizes-group">
     Sizes Available:<br>
     Kids: 4Y, 5-6Y, 6-7Y, 7-8Y<br>
