--- a/merch.html
+++ b/merch.html
@@ -121,7 +121,7 @@
 
   <div class="products">
 
-    <!-- Rashguard and Shorts Product -->
+    <!-- Long Sleeve Rashguard and Shorts Product -->
     <div class="product">
       <img src="Photos/nogisetlongsleeve.png" alt="Restigouche Dojo No-Gi Rashguard and Shorts">
       <h3>No-Gi Set (Top and Bottom)</h3>
@@ -136,7 +136,7 @@
       <a href="mailto:restigouchedojo@gmail.com?subject=Gear%20Inquiry" class="contact-button">Contact Us</a>
     </div>
 
-<!-- Rashguard and Shorts Product -->
+<!-- Short Sleeve Rashguard and Shorts Product -->
 <div class="product">
   <img src="Photos/nogisetshortsleeve.png" alt="Restigouche Dojo No-Gi Short Sleeve Rashguard and Shorts">
   <h3>No-Gi Set (Short Sleeve Top and Shorts)</h3>
@@ -181,7 +181,7 @@
   <a href="mailto:restigouchedojo@gmail.com?subject=T-Shirt%20Order%20Request" class="contact-button">Contact Us</a>
 </div>
 
-
+<!-- Windbreakers -->
 <div class="product">
   <img src="Photos/windbreaker.png" alt="Windbreaker Set (Top and Bottom)">
   <h3>Windbreaker Set (Top and Bottom)</h3>
@@ -196,6 +196,15 @@
   <a href="mailto:restigouchedojo@gmail.com?subject=Windbreaker%20Order%20Request" class="contact-button">Contact Us</a>
 </div>
 
+        <!-- Baseball Hat -->
+<div class="product">
+  <img src="Photos/baseballhat.png" alt="Baseball Hat">
+  <h3>Baseball Hat</h3>
+  <div class="price">Price: $45 </div>
+  <div class="stock">Made on Demand - No Stock Kept</div>
+  <div class="sizes-group">Sizes Available: One size fit all</div>
+  <a href="mailto:restigouchedojo@gmail.com?subject=T-Shirt%20Order%20Request" class="contact-button">Contact Us</a>
+</div>
 
   </div>
 </div>
