--- a/merch.html
+++ b/merch.html
@@ -133,7 +133,7 @@
       <div class="sizes-group">
         <strong>Shorts Sizes:</strong> Kids 0 | Adult XL, XL, XL
       </div>
-      <a href="mailto:restigouchedojo@gmail.com?subject=Gear%20Inquiry" class="contact-button">Contact Us</a>
+      <a href="mailto:restigouchedojo@gmail.com?subject=Long%20Sleeve%20Rahguard%20Order%20Request" class="contact-button">Contact Us</a>
     </div>
 
 <!-- Short Sleeve Rashguard and Shorts Product -->
@@ -148,7 +148,7 @@
   <div class="sizes-group">
     <strong>Shorts Sizes:</strong> Kids 0 | Adult S, M, L, L, L, XL, XL, XL, XL, XL, 2XL
   </div>
-  <a href="mailto:restigouchedojo@gmail.com?subject=Gear%20Inquiry" class="contact-button">Contact Us</a>
+  <a href="mailto:restigouchedojo@gmail.com?subject=Short%20Sleeve%20Rahguard%20Order%20Request" class="contact-button">Contact Us</a>
 </div>
 
     <!-- Crewnecks -->
@@ -203,7 +203,7 @@
   <div class="price">Price: $45 </div>
   <div class="stock">Made on Demand - No Stock Kept</div>
   <div class="sizes-group">Sizes Available: One size fit all</div>
-  <a href="mailto:restigouchedojo@gmail.com?subject=T-Shirt%20Order%20Request" class="contact-button">Contact Us</a>
+  <a href="mailto:restigouchedojo@gmail.com?subject=Baseball%20Hat%20Order%20Request" class="contact-button">Contact Us</a>
 </div>
 
   </div>
