--- a/merch.html
+++ b/merch.html
@@ -181,6 +181,16 @@
   <a href="mailto:restigouchedojo@gmail.com?subject=T-Shirt%20Order%20Request" class="contact-button">Contact Us</a>
 </div>
 
+        <!-- Fox Catcher Style TShirts -->
+<div class="product">
+  <img src="Photos/foxcatchertshirt.png" alt="T-Shirt">
+  <h3>Fox Catcher Style T-Shirt</h3>
+  <div class="price">Price: S-XL $35 | 2XL-3XL $40</div>
+  <div class="stock">Made on Demand - No Stock Kept</div>
+  <div class="sizes-group">Sizes Available: S, M, L, XL, 2XL, 3XL</div>
+  <a href="mailto:restigouchedojo@gmail.com?subject=Foxcatcher%20T-Shirt%20Order%20Request" class="contact-button">Contact Us</a>
+</div>
+
 <!-- Windbreakers -->
 <div class="product">
   <img src="Photos/windbreaker.png" alt="Windbreaker Set (Top and Bottom)">
