--- a/spookyrolls.html
+++ b/spookyrolls.html
@@ -19,6 +19,7 @@
             <p><strong>Time:</strong> 6:00 PM - 7:00 PM</p>
             <p><strong>Location:</strong> Restigouche Dojo</p>
             <p><strong>Costumes:</strong> Yes! Get creative and dress up, but remember no makeup or zippers. Wear a gi, but no-gi is ideal due to costume flexibility.</p>
+            <p><strong>Bonus:</strong> Best costume will win a prize!</p>
             <p><strong>Special Surprise:</strong> The night will include a unique twist during rolling. Expect something unexpected to add an extra challenge to your training!</p>
         </div>
     </section>
