--- a/spookyrolls.html
+++ b/spookyrolls.html
@@ -15,12 +15,12 @@
     <section class="event-info">
         <h2>Event Details</h2>
         <div class="info-box">
-            <p><strong>Date:</strong> October 30th, 2024</p>
+            <p><strong>Date:</strong> October 30th, 2025</p>
             <p><strong>Time:</strong> 6:00 PM - 7:00 PM</p>
             <p><strong>Location:</strong> Restigouche Dojo</p>
-            <p><strong>Costumes:</strong> Yes! Get creative and dress up, but remember no makeup or zippers. Wear a gi, but no-gi is ideal due to costume flexibility.</p>
+            <p><strong>Costumes:</strong> Yes! Get creative and dress up, but remember no makeup or zippers. No-gi is ideal due to costume flexibility.</p>
             <p><strong>Bonus:</strong> Best costume will win a prize!</p>
-            <p><strong>Special Surprise:</strong> The night will include a unique twist during rolling. Expect something unexpected to add an extra challenge to your training!</p>
+        
         </div>
     </section>
 
@@ -37,7 +37,7 @@
             <h3>Technical Session</h3>
             <p>As always, we’ll start with a technical part focusing on improving your BJJ skills.</p>
             <h3>Rolling Time</h3>
-            <p>Once we get our blood pumping, we’ll roll with a spooky surprise! The night will feature something extra to make your rolling experience more thrilling!</p>
+            <p>Once we get our blood pumping, we’ll roll with a spooky surprise!</p>
         </div>
     </section>
 
