--- a/spookyrolls.html
+++ b/spookyrolls.html
@@ -19,6 +19,7 @@
             <p><strong>Time:</strong> 6:00 PM - 7:00 PM</p>
             <p><strong>Location:</strong> Restigouche Dojo</p>
             <p><strong>Costumes:</strong> Yes! Get creative and dress up, but remember no makeup or zippers. No-gi is ideal due to costume flexibility.</p>
+            <p><strong>Rolls with a Twist:</strong> This won’t be your typical rolls — we’ll mix in some fun Halloween-themed challenges and games throughout the rounds!</p>
             <p><strong>Bonus:</strong> Best costume will win a prize!</p>
         
         </div>
