--- a/spookyrolls.html
+++ b/spookyrolls.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spooky Rolls - BJJ Halloween Event</title>
+    <title>Spooky Rolls - BJJ Event</title>
     <link rel="stylesheet" href="spookyrolls.css">
 </head>
 <body>
     <header>
-        <h1>🎃 Spooky Rolls - BJJ Halloween Event 🎃</h1>
-        <p class="event-details">Join us for a spooky and fun-filled night of Brazilian Jiu-Jitsu with a Halloween twist! Costumes encouraged, but please no makeup or zippers!</p>
+        <h1>🎃 Spooky Rolls - BJJ Event 🎃</h1>
+        <p class="event-details">Join us for a spooky and fun-filled night of Brazilian Jiu-Jitsu with a twist! Costumes encouraged, but please no makeup or zippers!</p>
     </header>
 
     <section class="event-info">
@@ -19,8 +19,7 @@
             <p><strong>Time:</strong> 6:00 PM - 7:00 PM</p>
             <p><strong>Location:</strong> Restigouche Dojo</p>
             <p><strong>Costumes:</strong> Yes! Get creative and dress up, but remember no makeup or zippers. No-gi is ideal due to costume flexibility.</p>
-            <p><strong>Rolls with a Twist:</strong> This won’t be your typical rolls — we’ll mix in some fun Halloween-themed challenges and games throughout the rounds!</p>
-            <p><strong>Bonus:</strong> Best costume will win a prize!</p>
+            <p><strong>Rolls with a Twist:</strong> This won’t be your typical rolls — we’ll mix in some fun challenges and games throughout the rounds!</p>
         
         </div>
     </section>
