--- a/spookyrolls.html
+++ b/spookyrolls.html
@@ -27,7 +27,7 @@
     <section class="photo">
         <h2>Event Sneak Peek</h2>
         <div class="photo-container">
-            <img src="Photos/scream.webp" alt="Spooky Rolls BJJ Event Photo" class="event-photo">
+            <img src="Photos/Spooky.jpg" alt="Spooky Rolls BJJ Event Photo" class="event-photo">
         </div>
     </section>
 
