--- a/registration.html
+++ b/registration.html
@@ -88,10 +88,10 @@
                 <div class="people__div people__div--info">
                     <h2 class="people__name">2025 season</h2>
                     <p class="people__desc"> Fall block: $216.40
-                         <a href="https://square.link/u/2qa9unSf" target="_blank">Register Now!</a>
+                         <a href="https://www.paypal.com/ncp/payment/5498DDS7E34M4" target="_blank">Register Now!</a>
                     
 			<br><span class="red"><strong>ON SALE</strong></span>: Annual: $389.30
-			       <a href="https://square.link/u/ITi22NJX" target="_blank">Register Now!</a>
+			       <a href="https://www.paypal.com/ncp/payment/GFGDDCGH4LSHC" target="_blank">Register Now!</a>
 			<br><a href="https://restigouchedojo.com/kinderjudoinfo.html" target="">Program info</a>
 			</p>
                 </div>
@@ -107,10 +107,10 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">2025 season</h2>
                       <p class="people__desc">Fall block: $283.30
-                        <a href="https://square.link/u/u6AABYXN" target="_blank">Register Now!</a>
+                        <a href="https://www.paypal.com/ncp/payment/EU2PZ9LFYGWPE" target="_blank">Register Now!</a>
                       
 			 <br><span class="red"><strong>ON SALE</strong></span>: Annual: $505
-                        <a href="https://square.link/u/xhOEmpcS" target="_blank">Register Now!</a>
+                        <a href="https://www.paypal.com/ncp/payment/2WZDMEQVBZKHL" target="_blank">Register Now!</a>
 			      <br><a href="https://restigouchedojo.com/youthjudoinfo.html" target="">Program info</a>
                       </p>
                   </div>
@@ -179,7 +179,7 @@
                 <div class="people__div people__div--info">
                     <h2 class="people__name">Youth No-Gi BJJ</h2>
                     <p class="people__desc"> Fall block: $200
-                        <a href="https://square.link/u/ZGpCTToi" target="_blank">Register Now!</a>
+                        <a href="https://www.paypal.com/ncp/payment/YVVEXQ9K24C5G" target="_blank">Register Now!</a>
                 </div>
                 <div class="people__div people__div--name">
                     <h2 class="people-name">Youth No-Gi BJJ</h2>
