--- a/registration.html
+++ b/registration.html
@@ -143,8 +143,8 @@
                 </div>
                 <div class="people__div people__div--info">
                     <h2 class="people__name">Annual membership</h2>
-                    <p class="people__desc"> $63.5
-                <a href="https://square.link/u/Vyo6ryns" target="_blank">Pay now</a>
+                    <p class="people__desc"> $60
+                <a href="https://registration.judocanada.org/club/restigouche-dojo/500010/" target="_blank">Pay now</a>
 			</p>
                 </div>
                 <div class="people__div people__div--name">
